Fix images & bullet points

--- a/src/phala-paper.tex
+++ b/src/phala-paper.tex
@@ -25,6 +25,7 @@
 \usepackage{xspace}
 \usepackage{todonotes}
 \def\zhou#1{\todo[inline,backgroundcolor=yellow]{{\bf Comments from sfzhou:} #1}\xspace}
+\def\hang#1{\todo[inline,backgroundcolor=pink]{{\bf Comments from hang:} #1}\xspace}
 
 \begin{document}
 \title{Phala Network: A Confidential Smart Contract Network Based on Polkadot}
