Improve intro section

--- a/src/tex/1-introduction.tex
+++ b/src/tex/1-introduction.tex
@@ -4,7 +4,7 @@ Nowadays the security of the permissionless blockchain is typically guaranteed b
 \zhou{We need some real-world cases under which confidentiality is vital.}
 \hang{todo: processing business data on-chain, DeFi position privacy, GDRP complaince...}
 
-Several projects addressed the privacy problem. Monero and Zcash implemented private transaction by ring signature~\cite{xxx} and zk-SNARK~\cite{xxx} technology but it's limited to cryptocurrencies and hard to be extended to general-purpose smart contracts. MPC (multi-party computing) can theoretically run arbitrary programs without revealing intermediate state to the participants but also introduces a performance overhead of $10^6$ times~\cite{cheng2019ekiden}.
+Several projects addressed the privacy problem. Monero and Zcash implemented private transaction by ring signature~\cite{monero} and zk-SNARK~\cite{zcash} technology but it's limited to cryptocurrencies and hard to be extended to general-purpose smart contracts. MPC (multi-party computing) can theoretically run arbitrary programs without revealing intermediate state to the participants but also introduces a performance overhead of $10^6$ times~\cite{cheng2019ekiden}.
 
 Currently, pure software solutions are not viable. A new approach is to utilize special hardware. TEE (Trusted Execution Environment)~\cite{teewiki} is a special area in some processors that provides a higher level of security including isolated execution, code integration, and state confidentiality. Naive TEE as a computing platform has several shortages such as the lack of a reliable time source and availability guarantee.
 \zhou{There should be more shortage examples.}
@@ -12,4 +12,4 @@ Currently, pure software solutions are not viable. A new approach is to utilize 
 
 Ekiden~\cite{cheng2019ekiden} fixed these problems by introducing a TEE-blockchain hybrid architecture and implemented high performance confidential smart contract. However, contracts in Ekiden are isolated, meaning the contracts cannot interoperate with each other, and cannot interoperate with external blockchains.
 
-In this paper, we present Phala Network, a novel cross-chain interoperable confidential smart contract network based on Polkadot. We introduce an \textit{Event Sourcing / Command Query Responsibility Segregation} architecture into a TEE-blockchain hybrid system to achieve cross-chain interoperability for confidential smart contracts. We further designed a Libra-Polkadot bridge to implement a privacy-preserving Libra Coin by confidential contract.
+In this paper, we present Phala Network, a novel cross-chain interoperable confidential smart contract network as a Polkadot parachain. We introduce an \textit{Event Sourcing / Command Query Responsibility Segregation} \cite{eventsourcing, cqrs} architecture into a TEE-blockchain hybrid system to achieve cross-chain interoperability for confidential smart contracts. We further designed a Libra-Polkadot bridge to implement a privacy-preserving Libra Coin by confidential contract.
