Change intro & background

--- a/src/tex/1-introduction.tex
+++ b/src/tex/1-introduction.tex
@@ -12,4 +12,4 @@ Currently, pure software solutions are not viable. A new approach is to utilize 
 
 Ekiden~\cite{cheng2019ekiden} fixed these problems by introducing a TEE-blockchain hybrid architecture and implemented high performance confidential smart contract. However, contracts in Ekiden are isolated, meaning the contracts cannot interoperate with each other, and cannot interoperate with external blockchains.
 
-In this paper, we present Phala Network, a novel cross-chain interoperable confidential smart contract network as a Polkadot parachain. We introduce an \textit{Event Sourcing / Command Query Responsibility Segregation} \cite{eventsourcing, cqrs} architecture into a TEE-blockchain hybrid system to achieve cross-chain interoperability for confidential smart contracts. We further designed a Libra-Polkadot bridge to implement a privacy-preserving Libra Coin by confidential contract.
+In this paper, we present Phala Network, a novel cross-chain interoperable confidential smart contract network as a Polkadot parachain. We introduce an \textit{Event Sourcing / Command Query Responsibility Segregation}~\cite{eventsourcing, cqrs} architecture into a TEE-blockchain hybrid system to achieve cross-chain interoperability for confidential smart contracts. We further designed a Libra-Polkadot bridge to implement a privacy-preserving Libra Coin by confidential contract.
